2016-03-16  Ben Elliston  <bje@gnu.org>

	Revert this change (the GCC testsuite uses diff):

	2016-03-15  Ben Elliston  <bje@gnu.org>

	* lib/utils.exp (diff): Remove proc.
	* doc/ref.xml: Update documentation.
	* doc/dejagnu.texi: Regenerate.
	* NEWS: Update.

2016-03-15  Ben Elliston  <bje@gnu.org>

	* testsuite/runtest.all/options.exp: Properly clean up log files
	left by the runtest under test.

2016-03-15  Ben Elliston  <bje@gnu.org>

	* testsuite/runtest.all/load_lib.exp: Typo fixes.

2016-03-15  Ben Elliston  <bje@gnu.org>

	* testsuite/runtest.all/options.exp: Add more tests.

2016-03-15  Ben Elliston  <bje@gnu.org>

	* testsuite/libdejagnu/tunit.exp: Clean up.

2016-03-15  Ben Elliston  <bje@gnu.org>

	* lib/utils.exp (diff): Remove proc.
	* doc/ref.xml: Update documentation.
	* doc/dejagnu.texi: Regenerate.
	* NEWS: Update.

2016-03-15  Ben Elliston  <bje@gnu.org>

	Revert this change:
	2016-02-14  Steve Ellcey  <sellcey@mips.com>

	* baseboards/multi-sim.exp (dynamic_linker_flag): Check
	GCC_UNDER_TEST.
	* baseboards/multi-sim.exp (rpath_flags): Ditto.

2016-03-13  Ben Elliston  <bje@gnu.org>

	* lib/utils.exp: Whitespace fixes.

2016-03-13  Ben Elliston  <bje@gnu.org>

	* lib/dg.exp (dg-process-target): Remove old commented code.
	* lib/dg.exp (dg-test): Likewise.

2016-03-13  Ben Elliston  <bje@gnu.org>

	* lib/dg.exp: Improve top-of-file documentation.

2016-03-05  Yvan Roux  <yvan.roux@linaro.org>

	* lib/remote.exp (remote_exec): Restore original timeout value.

2016-03-04  Yvan Roux  <yvan.roux@linaro.org>

	* lib/remote.exp (standard_upload): Remove dead code.

2016-02-24  Ben Elliston  <bje@gnu.org>

	* lib/utils.exp (prune): Restore this proc.
	* doc/ref.xml: Update documentation.
	* doc/dejagnu.texi: Regenerate.
	* NEWS: Update.

2016-02-23  Iain Buclaw  <ibuclaw@gdcproject.org>

	* lib/libgloss.exp (find_gdc): New proc.
	* lib/target.exp (default_target_compile): Add D support.
	* NEWS: Update.

2016-02-20  Ben Elliston  <bje@gnu.org>
